@@ -3,6 +3,7 @@ todoyu core changelog
 core 2.2.0 - not released yet
 	* Feature: Removing valueless foreign records does not require confirmation anymore
 	* Feature: Better support for SQL statements to update fields. Comma is now allowed in type definition (ex: DECIMAL(5,2))
+	* Added: Todoyu.Form.assistDurationInput() for onblur-validation of duration input fields
 	* Added: New form hook for data modification immediately before rendering (use TodoyuFormHook::registerRenderForm() for callback registration)
 	* Added: global confirmation dialog for toggling of record-types with exclusive "is_preferred" attribute
 	* Added: new DB query building method: Todoyu::db()->buildInArrayQuery()
